--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,83 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Armand Bryant</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!--Header Nav Bar Row 1-->
+    <div class="col-md-12">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <a class="navbar-brand mb-0 h1" href="#">Armand Bryant</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                <a class="nav-item nav-link" href="index.html">About</a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link active" href="contact.html">Contact <span class="sr-only">(current)</span></a>                           
+                </div>
+            </div>
+        </nav>
+    </div> 
+    
+    <!--Main Conatiner-->
+    <div class="container-fluid">
+        <div class="row">
+            <!--Main Content Spacer-->
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-8 content-box">
+                <!--Row Contact-->
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Contact</h2>
+                    </div>
+                </div>
+                <div class="row cpd-lf mgn-bt">
+                    <div class="col-md-12">
+                    <hr>    
+                        <div class="inputs">
+                            <div class="row">
+                                <label>Name</label>
+                            </div>
+                            <div class="row">    
+                                <input type="name">
+                            </div>
+                            <div class="row">
+                                <label>Email</label>
+                            </div>
+                            <div class="row">    
+                                <input type="email">
+                            </div>
+                            <div class="row">
+                                <label>Message</label>
+                            </div>
+                            <div class="row">    
+                                <textarea cols="30" rows="10"></textarea>
+                            </div>
+                            <div class="row">    
+                                <button>Submit</button>    
+                            </div>
+                        </div>
+                                
+                    </div>
+                </div>
+            </div>    
+        </div>    
+    </div> 
+    <!--Footer-->
+    <nav class="navbar navbar fixed-bottom navbar-dark bg-dark">
+        <div class="mx-auto" style="width: 200px;">    
+            <span class="navbar-text">
+                <p>Copyright&copy;</p>
+            </span>
+        </div>
+    </nav>  
+</body>
+</html>
