--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Armand Bryant</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!--Header Nav Bar Row 1-->
+    <div class="col-md-12">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <a class="navbar-brand mb-0 h1" href="#">Armand Bryant</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-item nav-link" href="contact.html">Contact</a>                           
+                </div>
+            </div>
+        </nav>
+    </div> 
+    
+    <!--Main Conatiner-->
+    <div class="container-fluid">
+        <div class="row">
+            <!--Main Content Spacer-->
+            <div class="col-md-2">
+            </div>
+            <div class="col-xs-8 col-sm- 8 col-md-8 content-box">
+                <!--Row About Me-->
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>About Me</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <!--Line Break-->
+                        <hr>
+                        <!--Main Image-->  
+                        <img src="assets/images/ab.jpg" class="img-fluid" alt="ab pic" align=left>
+                        <!--Body Text-->
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus varius massa lacus, quis gravida est sollicitudin nec. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed consequat elit in venenatis ultricies. Fusce sit amet ex commodo, congue mi non, eleifend arcu. Proin vel velit id massa sagittis placerat. Nunc eu massa lacus. Morbi lectus sem, mattis a nulla mattis, ultrices tristique leo.<br><br>
+                        Etiam sodales nisi eget porttitor scelerisque. Cras rutrum, urna eu consectetur volutpat, diam ipsum euismod velit, sit amet efficitur augue ligula non nisl. Quisque egestas nunc at turpis auctor, lobortis scelerisque nisl ullamcorper. Mauris nunc metus, volutpat in volutpat ac, blandit sit amet justo. <br><br>
+                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed a malesuada libero. Donec vehicula nec massa vel dapibus. Nullam faucibus et sapien in semper. Praesent imperdiet est in ornare suscipit. Fusce cursus rhoncus tellus eget eleifend. Nulla ac malesuada ligula, a lacinia leo. Aliquam erat volutpat. Integer placerat mattis dui, non facilisis ipsum tincidunt sed. 
+                        </p>
+                    </div>
+                </div>
+            </div>    
+        </div>    
+    </div> 
+    <!--Footer-->
+    <nav class="navbar navbar fixed-bottom navbar-dark bg-dark">
+        <div class="mx-auto" style="width: 200px;">    
+            <span class="navbar-text">
+                <p>Copyright&copy;</p>
+            </span>
+        </div>
+    </nav>  
+</body>
+</html>
