--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,110 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Armand Bryant</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!--Header Nav Bar-->
+    <div class="col-md-12">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <a class="navbar-brand mb-0 h1" href="#">Armand Bryant</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                <a class="nav-item nav-link" href="index.html">About</a>
+                <a class="nav-item nav-link active" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="contact.html">Contact</a>                           
+                </div>
+            </div>
+        </nav>
+    </div> 
+    
+    <!--Main Conatiner-->
+    <div class="container-fluid">
+        <!--Main Container Row 1-->
+        <div class="row">
+            <!--Main Content Right Spacer-->
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-8 content-box">
+                <!--Row Portfolio-->
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Portfolio</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <hr>
+                        <!--First Row of Images-->
+                        <div class="row pd-lf">
+                            <div class="col-md-6">
+                                <div class="card bg-dark text-white" style="width: 200px;">
+                                    <img src="assets/images/bridge.jpg" class="card-img" alt="Bridge">
+                                    <div class="card-img-overlay">
+                                        <h5 class="card-title">Hangman</h5>
+                                    </div>
+                                </div>
+                            </div> 
+                            <div class="col-md-6">  
+                                <div class="card bg-dark text-white" style="width: 200px;">
+                                    <img src="assets/images/rocket.jpg" class="card-img" alt="Rocket">
+                                    <div class="card-img-overlay">
+                                        <h5 class="card-title">RPG Game</h5>
+                                    </div>
+                                </div>
+                            </div>     
+                        </div>
+                        <!--Second Row of Images-->    
+                        <div class="row pd-lf mgn-tp">
+                            <div class="col-md-6">
+                                <div class="card bg-dark text-white" style="width: 200px;">
+                                    <img src="assets/images/space.jpg" class="card-img" alt="Space">
+                                    <div class="card-img-overlay">
+                                        <h5 class="card-title">Trivia Game</h5>
+                                    </div>
+                                </div>
+                            </div> 
+                            <div class="col-md-6">  
+                                <div class="card bg-dark text-white" style="width: 200px;">
+                                    <img src="assets/images/tent.jpg" class="card-img" alt="Tent">
+                                    <div class="card-img-overlay">
+                                        <h5 class="card-title">Rutgers Info Widget</h5>
+                                    </div>
+                                </div>
+                            </div>     
+                        </div>
+                        <!--Third Row of Images-->
+                        <div class="row pd-lf mgn-tp mgn-bt">
+                            <div class="col-md-6">
+                                <div class="card bg-dark text-white" style="width: 200px;">
+                                    <img src="assets/images/water.jpg" class="card-img" alt="Water">
+                                    <div class="card-img-overlay">
+                                        <h5 class="card-title">Rock Paper Scissors</h5>
+                                    </div>
+                                </div>
+                            </div>                        
+                        </div>        
+                    </div>
+                </div>
+            </div>    
+        </div>    
+    </div> 
+    <!--Footer-->
+    <nav class="navbar navbar fixed-bottom navbar-dark bg-dark">
+        <!--Used to center text-->
+        <div class="mx-auto" style="width: 200px;">    
+            <span class="navbar-text">
+                <p>Copyright&copy;</p>
+            </span>
+        </div>
+    </nav>  
+</body>
+</html>
